tests/gabc-dump/should-fail/center-in-elision.gabc
name: center in elision;
%%
(c3) Elis<e>{io}n</e>(g)
